--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>coraçãopet</title>
 </head>
 <body>
-</header>coraçãopet</header>
+<header>
+<h1>cuidados com pet</h1>
+</header>
+
 </body>
 </html>
