--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <header>
 <h1>cuidados com pet</h1>
 </header>
-
+<img src="Story início de novembro pet shop rosa e azul 1.png">
+<img src="racoes-para-cachorro 1.png">
+<img src="cachorro-exercicio 1.png">
+<img src="images (4) 1.png">
+<img src="images (3).png">
+<img src="images (2).png">
+<img src="images (1) 1.png">
+<img src="images (5) 1.png">
 </body>
 </html>
