--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 <header>
 <h1>cuidados com pet</h1>
 </header>
-<img src="Story início de novembro pet shop rosa e azul 1.png">
+<img id="imagemgrande" src="Story início de novembro pet shop rosa e azul 1.png">
 <p>proporcione ao seu pet um cuidado diário completo, com alimentação balanceada, exercícios, higiene, e muito carinho, para garantir saúde, felicidade e bem-estar a cada dia.</p>
 <h2>alimentação balanceada</h2>
-<img src="racoes-para-cachorro 1.png">
+<img id="ração" src="racoes-para-cachorro 1.png">
 <h3>exercícios</h3>
-<img src="cachorro-exercicio 1.png">
-<img src="images (4) 1.png">
+<img id="exerciciocachorro1" src="cachorro-exercicio 1.png">
+<img id="exerciciogato2" src="images (4) 1.png">
 <h4>higiene</h4>
-<img src="images (3).png">
-<img src="images (2).png">
-<img src="images (1) 1.png">
+<img id="banhogato" src="images (3).png">
+<img id=" cachorropastadedente" src="images (2).png">
+<img id="cachorropato" src="images (1) 1.png">
 <h5>bem-estar animal</h5>
-<img src="images (5) 1.png">
+<img id="cachorrosegatos" src="images (5) 1.png">
 </body>
 </html>
